--- a/components/AddToCartComponent.html
+++ b/components/AddToCartComponent.html
@@ -258,7 +258,7 @@
             <tbody>
                 <tr>
                     <td class="col-md-4">
-<code>constructor(cartService: <a href="../injectables/CartService.html">CartService</a>, priceService: <a href="../injectables/PriceService.html">PriceService</a>, ngZone: <a href="https://angular.io/api/core/NgZone" target="_blank">NgZone</a>, cdr: <a href="https://angular.io/api/core/ChangeDetectorRef" target="_blank">ChangeDetectorRef</a>, config: ConfigurationService, router: <a href="https://angular.io/api/router/Router" target="_blank">Router</a>)</code>
+<code>constructor(cartService: <a href="../injectables/CartService.html">CartService</a>, priceService: <a href="../injectables/PriceService.html">PriceService</a>, productService: <a href="../injectables/ProductService.html">ProductService</a>, ngZone: <a href="https://angular.io/api/core/NgZone" target="_blank">NgZone</a>, cdr: <a href="https://angular.io/api/core/ChangeDetectorRef" target="_blank">ChangeDetectorRef</a>, router: <a href="https://angular.io/api/router/Router" target="_blank">Router</a>)</code>
                     </td>
                 </tr>
 
@@ -311,6 +311,22 @@
                                                         </td>
                                                 </tr>
                                                 <tr>
+                                                        <td>productService</td>
+                                                  
+                                                        <td>
+                                                                    <code><a href="../injectables/ProductService.html" target="_self" >ProductService</a></code>
+                                                        </td>
+                                                  
+                                                    <td>
+                                                            No
+                                                    </td>
+                                                    
+                                                        <td>
+                                                                <code><p>Instance of ProductService</p>
+</code>
+                                                        </td>
+                                                </tr>
+                                                <tr>
                                                         <td>ngZone</td>
                                                   
                                                         <td>
@@ -331,20 +347,6 @@
                                                   
                                                         <td>
                                                                     <code><a href="https://angular.io/api/core/ChangeDetectorRef" target="_blank" >ChangeDetectorRef</a></code>
-                                                        </td>
-                                                  
-                                                    <td>
-                                                            No
-                                                    </td>
-                                                    
-                                                        <td>
-                                                        </td>
-                                                </tr>
-                                                <tr>
-                                                        <td>config</td>
-                                                  
-                                                        <td>
-                                                                    <code>ConfigurationService</code>
                                                         </td>
                                                   
                                                     <td>
