--- a/components/ProductImagesComponent.html
+++ b/components/ProductImagesComponent.html
@@ -181,7 +181,7 @@
             <tbody>
                 <tr>
                     <td class="col-md-4">
-<code>constructor(ngZone: <a href="https://angular.io/api/core/NgZone" target="_blank">NgZone</a>, configurationService: ConfigurationService, dss: <a href="https://angular.io/api/platform-browser/DomSanitizer" target="_blank">DomSanitizer</a>)</code>
+<code>constructor(ngZone: <a href="https://angular.io/api/core/NgZone" target="_blank">NgZone</a>, productService: <a href="../injectables/ProductService.html">ProductService</a>, dss: <a href="https://angular.io/api/platform-browser/DomSanitizer" target="_blank">DomSanitizer</a>)</code>
                     </td>
                 </tr>
 
@@ -211,10 +211,10 @@
                                                     
                                                 </tr>
                                                 <tr>
-                                                        <td>configurationService</td>
+                                                        <td>productService</td>
                                                   
                                                         <td>
-                                                                    <code>ConfigurationService</code>
+                                                                    <code><a href="../injectables/ProductService.html" target="_self" >ProductService</a></code>
                                                         </td>
                                                   
                                                     <td>
