--- a/components/ProductCardComponent.html
+++ b/components/ProductCardComponent.html
@@ -206,7 +206,7 @@
             <tbody>
                 <tr>
                     <td class="col-md-4">
-<code>constructor(config: ConfigurationService)</code>
+<code>constructor(cartService: <a href="../injectables/CartService.html">CartService</a>)</code>
                     </td>
                 </tr>
 
@@ -224,10 +224,10 @@
                                         </thead>
                                         <tbody>
                                                 <tr>
-                                                        <td>config</td>
+                                                        <td>cartService</td>
                                                   
                                                         <td>
-                                                                    <code>ConfigurationService</code>
+                                                                    <code><a href="../injectables/CartService.html" target="_self" >CartService</a></code>
                                                         </td>
                                                   
                                                     <td>
@@ -574,15 +574,11 @@ star-rating{
 }
 .product-code{
     white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 50%;
 }
 .product-category{
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    max-width: 50%;
 }</code></pre>
     </div>
 
